define script as module

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   <body>
     <p>Hello, Staples!</p>
 
-    <script src="/js/main.mjs"></script>
+    <script src="/js/main.mjs" type="module"></script>
   </body>
 </html>
