--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
     <p>Hello, Staples!</p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="/js/main.mjs" type="module"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
