--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <p>Hello, Staples!</p>
-
+    <div id="frameDiv"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="/js/main.mjs"></script>
+    <script src="/js/main.mjs" type="module"></script>
   </body>
 </html>
