--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peter's Cut-Erator</title>
     <link rel="stylesheet" href="/style.css">
+    <link  href="/cropper.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="topBar">
@@ -12,9 +13,12 @@
     </div>
 
     <content>
-      <div id="formatRow">
+      <div id="formatBar">
       </div>
-      <canvas id="editor" width=200></canvas>
+      <div id="editor">
+      </div>
+      <div id="controls">
+      </div>
       <div id="placeHolder">
         <p id="inner">Here you will see your document preview.</p>
       </div>
