--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       <div id="editor">
       </div>
       <div id="controls">
+        <button id="addAll">Fill Page</button>
       </div>
       <div id="placeHolder">
         <p id="inner">Here you will see your document preview.</p>
