Design changes, woeking on drag + drop

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,22 @@
   </head>
   <body>
     <div id="topBar">
-      <p>Peter's Cut-Erator v0.2</p>
+      <img src="/imgs/staples.svg">
+      <div id="vr"></div>
+      <img src="/imgs/logo.svg">
     </div>
 
     <content>
       <div id="formatBar">
       </div>
       <div id="editor">
+        
       </div>
       <div id="controls">
-        <button id="addAll">Fill Page</button>
+          <button id="addOne">ADD ONE</button>
+          <button id="addAll">FILL PAGE</button>
       </div>
-      <div id="placeHolder">
+      <div id="placeHolder" class="highlightBorder">
         <p id="inner">Here you will see your document preview.</p>
       </div>
     </content>
