Working rotation and image changing

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       <div id="editor">
         
       </div>
+      <div id="topControls">
+        <button id="rotateLeft">RotateLeft</button>
+        <button id="rotateRight">RotateRight</button>
+      </div>
       <div id="controls">
           <button id="addOne">ADD ONE</button>
           <button id="addAll">FILL PAGE</button>
