Cleanup + adding single images

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,12 @@
         
       </div>
       <div id="topControls">
-        <button id="rotateLeft">RotateLeft</button>
-        <button id="rotateRight">RotateRight</button>
+        <button id="rotateLeft">
+          <img src="/imgs/left.png">
+        </button>
+        <button id="rotateRight">
+          <img src="/imgs/right.png">
+        </button>
       </div>
       <div id="controls">
           <button id="addOne">ADD ONE</button>
@@ -35,6 +39,5 @@
 
     <script src="/js/jspdf.umd.min.js"></script>
     <script src="/js/main.mjs" type="module"></script>
-    <script src="/js/editor.mjs" type="module"></script>
   </body>
 </html>
