updated styling on buttons and sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <div id="editor">
         
       </div>
-      <div id="topControls">
+      <div id="topControls" class="controls">
         <button id="rotateLeft">
           <img src="/imgs/left.png">
         </button>
@@ -28,9 +28,17 @@
           <img src="/imgs/right.png">
         </button>
       </div>
-      <div id="controls">
-          <button id="addOne">ADD ONE</button>
-          <button id="addAll">FILL PAGE</button>
+      <div id="bottomControls" class="controls">
+        <button id="addOne">ADD ONE</button>
+        <button id="addAll">FILL PAGE</button>
+      </div>
+      <div id="exportControls" class="controls">
+        <button id="clear">
+          <img src="/imgs/clear.png">
+        </button>
+        <button id="print">
+          <img src="/imgs/print.png">
+        </button>
       </div>
       <div id="placeHolder" class="highlightBorder">
         <p id="inner">Here you will see your document preview.</p>
