auto image rotation

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header>
-      <img src="/imgs/logos/staples.svg">
+      <img src="/imgs/logos/staples.svg" draggable="false">
       <div id="line"></div>
-      <img src="/imgs/logos/logo.svg">
+      <img src="/imgs/logos/logo.svg" draggable="false">
     </header>
     <main>
       <div id="formatBar">
@@ -21,10 +21,10 @@
       <div id="editorControls" class="controls">
         <div id="topControls" class="innerControls">
           <button id="rotateLeft">
-            <img src="/imgs/buttons/left.png">
+            <img src="/imgs/buttons/left.png" draggable="false">
           </button>
           <button id="rotateRight">
-            <img src="/imgs/buttons/right.png">
+            <img src="/imgs/buttons/right.png" draggable="false">
           </button>
         </div>
         <div id="bottomControls" class="innerControls">
@@ -36,10 +36,10 @@
       <div id="exportControls" class="controls">
         <div>
           <button id="clear">
-            <img src="/imgs/buttons/clear.png">
+            <img src="/imgs/buttons/clear.png" draggable="false">
           </button>
           <button id="print">
-            <img src="/imgs/buttons/print.png">
+            <img src="/imgs/buttons/print.png" draggable="false">
           </button>
         </div>
       </div>
