slight ui changes for first load

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
     <main>
       <div id="formatBar">
       </div>
-      <div id="editor">
+      <div id="editor" class="hide">
       </div>
-      <div id="editorControls" class="controls">
+      <div id="editorControls" class="controls hide">
         <div id="topControls" class="innerControls">
           <button id="rotateLeft">
             <img src="/imgs/buttons/left.png" draggable="false">
@@ -34,8 +34,7 @@
           <button id="addAll">FILL PAGE</button>
         </div>
       </div>
-      
-      <div id="exportControls" class="controls">
+      <div id="exportControls" class="controls hide">
         <div>
           <button id="clear">
             <img src="/imgs/buttons/clear.png" draggable="false">
@@ -45,7 +44,7 @@
           </button>
         </div>
       </div>
-      <div id="placeHolder" class="highlightBorder">
+      <div id="placeHolder" class="highlightBorder hide">
       </div>
     </main>
     <script src="/js/jspdf.umd.min.js"></script>
