Added intro tutorial text

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
       </div>
       <div id="placeHolder" class="highlightBorder hide">
       </div>
+      <div id="overlay">
+        <p>To start, select a format. <br> Then drag your image(s) here to add them to your document</p>
+      </div>
     </main>
     <script src="/js/jspdf.umd.min.js"></script>
     <script src="/js/main.mjs" type="module"></script>
