Speed optimizations by reducing rendering time

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
   </head>
   <body>
     <header>
-      <img src="/imgs/logos/staples.svg" draggable="false">
-      <div id="line"></div>
-      <img src="/imgs/logos/logo.svg" draggable="false">
+      <img src="/imgs/logos/logo.png" class="show" draggable="false">
+      <img src="/imgs/logos/staples.svg" class="hide" draggable="false">
+      <div id="line" class="hide"></div>
+      <img src="/imgs/logos/peter.svg" class="hide" draggable="false">
     </header>
     <main>
       <div id="formatBar">
