--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
         <p>To start, select a format. <br> Then drag your image(s) here to add them to your document</p>
       </div>
     </main>
-    <script src="/js/jspdf.umd.min.js"></script>
+    <script src="/js/lib/jspdf.umd.min.js"></script>
     <script src="/js/main.mjs" type="module"></script>
   </body>
 </html>
