--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <img src="/imgs/logos/logo.png" class="show" draggable="false">
+      <img src="/imgs/logos/logo.png" class="show" draggable="false" style="margin-top: -.5vh;">
       <img src="/imgs/logos/staples.svg" class="hide" draggable="false">
       <div id="line" class="hide"></div>
       <img src="/imgs/logos/peter.svg" class="hide" draggable="false">
