Added HEIC support

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
       </div>
     </main>
     <script src="/js/lib/jspdf.umd.min.js"></script>
+    <script src="/js/lib/heic2any.min.js"></script>
     <script src="/js/main.mjs" type="module"></script>
   </body>
 </html>
