--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Peter's Cut-Erator</title>
+    <title>CardWizard</title>
     <link rel="preload" href="fonts/MotivaBlack.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="fonts/Lulo_Clean_One_Bold.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" href="/style.css">
     <link  href="/cropper.min.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favi/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favi/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favi/favicon-16x16.png">
+    <link rel="manifest" href="/favi/site.webmanifest">
+    <link rel="mask-icon" href="/favi/safari-pinned-tab.svg" color="#ce0000">
+    <link rel="shortcut icon" href="/favi/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/favi/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <header>
