--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       <div id="placeHolder" class="highlightBorder hide">
       </div>
       <div id="overlay">
-        <p>To start, select a format. <br> Then drag your image(s) here to add them to your document</p>
+        <p>To start, select a format. <br> Then drag your image(s) here to add them to your document.</p>
       </div>
     </main>
     <script src="/js/lib/jspdf.umd.min.js"></script>
