Bugfixes for new sizes

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -45,7 +45,7 @@
     <div id="settingsModal" class="hide">
       <div id="settingsPane">
         <h1>Settings</h1>
-        <p>CardWizard (Cut-Erator) V2.0Beta: Project Warlock | Peter Ursem 2024</p>
+        <p>Cut-Erator V2.0Beta: Project Warlock | Peter Ursem 2024</p>
       </div>
     </div>
     <div id="formats" class="formatBar">
