Added alert notifying of current beta

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,11 @@
       <img src="/imgs/logos/peter.svg" class="hide" draggable="false">
     </header>
     <main>
+      <div id="alert">
+        <h1>Hey there!</h1>
+        <p>We're testing new features for CardWizard, click below to visit our</p>
+        <a href="https://cut-erator--warlock-86x5zfhe.web.app">Test site</a>
+      </div>
       <div id="formatBar">
       </div>
       <div id="editor" class="hide">
