--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -43,8 +43,8 @@
                                         <input type="password" id="password" name="password" autocomplete="current-password" required>
                                 </li>
                                 <li>
-                                        <input type="submit" id="submit" value="Log In">
-                                        <div id="registerLink" class="smallLink"><a href="/auth/register.html">I don't have an account</a></div>
+                                                <button id="submit">Log In</button>
+                                                <div id="registerLink" class="smallLink"><a href="/auth/register.html">I don't have an account</a></div>
                                 </li>
                         </ul>
                 </form>
