--- a/public/auth/register.html
+++ b/public/auth/register.html
@@ -83,7 +83,7 @@
                                         <input type="text" id="referral" name="referral" required>
                                 </li>
                                 <li>
-                                        <input type="submit" id="submit" value="Submit Application">
+                                        <button id="submit">Submit Application</button>
                                         <div id="loginLink" class="smallLink"><a href="/auth/login.html">I already have an account</a></div>
                                 </li>
                         </ul>
