--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CardWizard</title>
 
-        <link rel="preload" href="/fonts/TTNorms_Regular.ttf">
-        <link rel="preload" href="/fonts/TTNorms_Bold.ttf">
+        <link rel="preload" href="/fonts/TTNorms_Regular.ttf" as="font" crossorigin>
+        <link rel="preload" href="/fonts/TTNorms_Bold.ttf" as="font" crossorigin>
         <link rel="stylesheet" href="/css/index.css">
         <link rel="stylesheet" href="/css/style.css">
 
