--- a/public/app/index.html
+++ b/public/app/index.html
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/app/style.css">
-  <link href="/cropper.min.css" rel="stylesheet">
+  <link href="/app/cropper.min.css" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/favi/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favi/favicon-32x32.png">
