--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
 
 <body class="hide-excess">
         <div id="nav" class="sink-down flex anim">
-                <img src="/imgs/logos/blackLogo.png" href="/" id="nav-logo">
+                <img src="/imgs/logos/peter.svg" href="/" id="nav-logo">
                 <div class="flex"><a id="start" class="button link" href="/auth/verifyuser.html"><span>Get Started</span></a>
-                <a id="dark" style="color: transparent; text-shadow: 0 0 0 var(--grey); margin-inline: 10vw -10vw;">🌙</a></div>
+                <a id="dark" style="color: transparent; text-shadow: 0 0 0 var(--grey); margin-inline: 10vw -10vw; align-self: center;">🌙</a></div>
         </div>
         <section id="cover" class="center">
                 <div id="logo-container">
