--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
 <body class="hide-excess">
         <div id="nav" class="sink-down flex anim">
-                <a href="https://ursem.cc/" class="flex"><img src="/imgs/logos/peter.svg" id="nav-logo"></a>
+                <a class="flex"><img src="/imgs/logos/peter.svg" id="nav-logo"></a>
                 <div class="flex">
                         <a id="start" class="button link" href="/auth/verifyuser.html"><span>Get Started</span></a>
                         <a id="dark" style="color: transparent; text-shadow: 0 0 0 var(--grey); margin-inline: 10vw -10vw; align-self: center;">🌙</a>
