--- a/public/auth/verifyuser.html
+++ b/public/auth/verifyuser.html
@@ -29,19 +29,7 @@
 </head>
 
 <body>
-        <script src="/__/firebase/8.10.1/firebase-app.js"></script>
-        <script src="/__/firebase/8.10.1/firebase-auth.js"></script>
-        <script src="/__/firebase/init.js"></script>
-        <script type="module">
-                firebase.auth().onAuthStateChanged((user) => {
-                        if(user) {
-                                window.location.href = '/app/';
-                        }
-                        else {
-                                window.location.href = '/auth/register.html';
-                        }
-                });
-        </script>
+        <script type="module" src="/dist/auth.js"></script>
 </body>
 
 </html>
