--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -51,11 +51,7 @@
         </div>
         
         <div id="bottomBumper"></div>
-
-        <script src="/__/firebase/8.10.1/firebase-app.js"></script>
-        <script src="/__/firebase/8.10.1/firebase-auth.js"></script>
-        <script src="/__/firebase/init.js"></script>
-        <script src="/auth/authprovider.mjs" type="module"></script>
+        <script src="/dist/auth.js" type="module"></script>
 </body>
 
 </html>
