--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,5 @@
                 <p>Contact <a href="mailto:info@cardwizard.ca" style="color: var(--backgroundColour);">info@cardwizard.ca</a></p>
         </section>
 </body>
-<script src="/js/index.js"></script>
-
+<script src="/dist/index.js"></script>
 </html>
