Fixes for public

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/app/style.css">
   <link href="/app/cropper.min.css" rel="stylesheet">
-  <script src="/dist/auth.js"></script>
   
   <link rel="apple-touch-icon" sizes="180x180" href="/favi/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favi/favicon-32x32.png">
@@ -26,7 +25,7 @@
   <header class="hide-excess">
     <img src="/imgs/logos/logo.png" class="show" draggable="false" style="margin-top: -.5vh;">
     <div class="hide">
-      <a>Cut-Erator: Project Warlock</a>
+      <a>Cut-Erator: Project Sorcerer</a>
     </div>
   </header>
   <main class="full-height">
@@ -34,7 +33,7 @@
     <div id="settings-modal" class="hide overlay">
       <div id="settings-pane">
         <h2>Settings</h2>
-        <p>Cut-Erator: Project Warlock | Peter Ursem 2024</p>
+        <p>CardWizard V3: Project Sorcerer | Peter Ursem</p>
         <button id="logout">Log Out</button>
       </div>
     </div>
@@ -76,7 +75,7 @@
       <p>To start, select a format and drag your image(s) here.</p>
     </div>
   </main>
-
+  <script src="/dist/auth.js"></script>
 
 </body>
 
