--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
                 <div id="time" class="flex full bold">
                         <div>
                                 <h2>Bullet time.</h2>
-                                <p>One of the biggest problems plagueing SolutionShops is slow network speeds. Uploading files to our print server is a major bottleneck in the ordering process. By reducing preflight time CardWizard makes these products available for 1-Hour production windows.</p>
+                                <p>One of the biggest problems plaguing SolutionShops is slow network speeds. Uploading files to our print server is a major bottleneck in the ordering process. By reducing preflight time CardWizard makes these products available for 1-Hour production windows.</p>
                         </div>
                         <img src="/imgs/index/speedcomp.png" >
                 </div>
@@ -134,6 +134,14 @@
                                 <h2>It all makes cents.</h2>
                                 <p>By processing information on the computers already installed in SolutionShop, server costs are greatly reduced. The only resources required for CardWizard are static assets which can be cached internally, provided at a low cost from any basic web server, or installed right on SolutionShop PCs.</p>
                         </div>
+                </div>
+                <div id="cart" class="flex full bold">
+                        <div>
+                                <a class="highlight border rounded" style="padding: 5px 8px;">Coming soon</a>
+                                <h2>Go carts!</h2>
+                                <p>With carts and smart invoicing coming soon, Associates will be able to provide quotes and create invoices right from CardWizard. Associates will be able to choose from 1 Hour or Same Day turnarounds as well as finishes for each product. At the end of a transaction CardWizard will deliver an invoice of all the services rendered and their assocated SKUs so they can easily be scanned at the till.</p>
+                        </div>
+                        <img src="/imgs/index/cart.png">
                 </div>
         </section>
         
