restructuring auth links

--- a/public/auth/register/index.html
+++ b/public/auth/register/index.html
@@ -68,7 +68,7 @@
                                 </li>
                                 <li>
                                         <button id="submit">Submit Application</button>
-                                        <div id="loginLink" class="smallLink"><a href="/auth/login.html">I already have an account</a></div>
+                                        <div id="loginLink" class="smallLink"><a href="/auth/login">I already have an account</a></div>
                                 </li>
                         </ul>
                 </form>
