--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <div id="nav" class="sink-down flex anim">
                 <a class="flex"><img src="/imgs/logos/peter.svg" id="nav-logo"></a>
                 <div class="flex">
-                        <a id="start" class="button link" href="/auth/verifyuser.html"><span>Get Started</span></a>
+                        <a id="start" class="button link" href="/auth/verify"><span>Get Started</span></a>
                         <a id="dark" style="color: transparent; text-shadow: 0 0 0 var(--grey); margin-inline: 10vw -10vw; align-self: center;">🌙</a>
                 </div>
         </div>
@@ -44,7 +44,7 @@
                         <img id="long-logo" class="slide-in anim hidden-load hide noclick" src="/imgs/logos/blackLogo.png">
                 </div>
                 <h1 class="bold slide-in anim hidden-load hide">Fast, Secure, Efficient. <br>CardWizard works wonders in the SolutionShop.</h1>
-                <p class="slide-in anim hidden-load hide"><a class="button white-btn" id="small-cta" href="mailto:info@cardwizard.ca">Get in touch</a> <br><br>or <br> <a href='/auth/verifyuser.html' class="link">Get started with an invite code</a></p>
+                <p class="slide-in anim hidden-load hide"><a class="button white-btn" id="small-cta" href="mailto:info@cardwizard.ca">Get in touch</a> <br><br>or <br> <a href='/auth/verify' class="link">Get started with an invite code</a></p>
                 <div id="screenshot-container" class="slide-in anim hidden-load hide">
                         <img id="screenshot" class="noclick screenshot" src="/imgs/index/cover/screenshot.png">
                         <img style="--angle: 75;  --distance: 1000;" class="screenshot-bg noclick screenshot" src="/imgs/index/cover/bg1.png">
