--- a/public/app/index.html
+++ b/public/app/index.html
@@ -33,7 +33,7 @@
     <div id="settings-modal" class="hide overlay">
       <div id="settings-pane" class="modal-pane">
         <h2>Settings</h2>
-        <p>CardWizard V2: Project Warlock | Peter Ursem</p>
+        <p>CardWizard V2 | Peter Ursem</p>
         <div>
           <label for="dpi">Image DPI:</label>
           <input type="range" id="dpi" min="50" max="1200" value="300" step="50">
