more link changes

--- a/public/login/index.html
+++ b/public/login/index.html
@@ -45,7 +45,7 @@
                                 </li>
                                 <li>
                                         <button id="submit">Log In</button>
-                                        <div id="registerLink" class="smallLink"><a href="/auth/register">I don't have an account</a></div>
+                                        <div id="registerLink" class="smallLink"><a href="/register">I don't have an account</a></div>
                                 </li>
                         </ul>
                 </form>
